添加了程序图标

--- a/res/styles/styles.qrc
+++ b/res/styles/styles.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/res">
+    <qresource prefix="/res/styles">
         <file>lightStyle.qss</file>
     </qresource>
 </RCC>
