重写了图形检测功能，优化了元素列表对图形显示的控制

--- a/res/styles/lightStyle.qss
+++ b/res/styles/lightStyle.qss
@@ -186,6 +186,14 @@ QScrollArea {
 /* 标签 */
 QLabel {
     background-color: transparent;
+    font-family: 'Consolas', 'Courier New', monospace;
+    color: #3a3f46;
+}
+
+QMessageBox {
+    background-color: #ffffff;
+    font-family: 'Consolas', 'Courier New', monospace;
+    color: #3a3f46;
 }
 
 /* 滑块 - 灰色调 */
